--- a/options.html
+++ b/options.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8" />
   <title>Vault for Chrome: Settings</title>
   <script src="common.js"></script>
   <script src="options.js"></script>
   <script src="jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <link rel="stylesheet" href="bootstrap.min.css">
-  <script src="jquery.min.js"></script>
   <script src="bootstrap.min.js"></script>
 </head>
 
